test/types/range/open/openRanges-both.good
openRanges-both.chpl:6: In function 'testRanges':
openRanges-both.chpl:10: error: parallel iteration is not currently supported over ranges without bounds
  openRanges-both.chpl:1: called as testRanges(type t = int(64))
